[package]
name = "synthesys-helper"
version = "0.1.0"
authors = ["Jaden Pleasants <jadenpleasants@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
texture-synthesis = "0.8.0"
glob = "0.3.0"
rand = "0.7.3"
